--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Florida Web Design, Web & Mobile App Development - Vanila.io</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
   </head>
   <body>
