--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id='root'></div>
     <script src="/static/bundle.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="./animations.js"></script>
   </body>
 </html>
