--- a/index.html
+++ b/index.html
@@ -27,9 +27,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css">
 
+    <script src="http://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
+
     <script async="" src="//www.google-analytics.com/analytics.js"></script>
 
     <script src="/static/bundle.js"></script>
 
+    <script>
+      var
+      scrollContact = $(".aContact"),
+      menuLink = $(".navbar-right li")
+
+      menuLink.on("click", function() {
+      	$(".navbar-right li").removeClass("active");
+          $(this).addClass("active");
+      }),
+
+      scrollContact.on("click", function() {
+          $("#contact").velocity("scroll", {
+              duration: 1000,
+              easing: "easeInOutQuint"
+          })
+      })
+    </script>
   </body>
 </html>
