--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css">
 
-    <script src="http://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
 
     <script async="" src="//www.google-analytics.com/analytics.js"></script>
 
