--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-
-    <!--<title>Florida Web Design, Web & Mobile App Development - Vanila.io</title>
+  <title>Florida Web Design, Web & Mobile App Development - Vanila.io</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Florida Web & mobile development and design agency for IOS, Android using latest technology . Our company is providing with SEO and Social ">
     <meta name="author" content="Vanila">
@@ -16,7 +15,7 @@
     <meta name="twitter:url" content="https://vanila.io">
     <meta name="twitter:title" content="Vanila - Mobile & Web development, Design, SEO">
     <meta name="twitter:description" content="Vanila is team who is specialized in front and backend development, seo and marketing.">
-    <meta name="twitter:image" content="https://vanila.io/img/vanila-og.png">-->
+    <meta name="twitter:image" content="https://vanila.io/img/vanila-og.png">
 
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 
