fix: mode audio and make scripts defer

--- a/src/index.html
+++ b/src/index.html
@@ -37,37 +37,27 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" async defer></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
       integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"
+      async defer
     ></script>
 
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
-    <script async="" src="//www.google-analytics.com/analytics.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js" async defer></script>
+    <script async="" src="//www.google-analytics.com/analytics.js" async defer></script>
   </head>
   <body>
     <div id="root"></div>
-
     <script src="./index.js"></script>
-
-    <script>
-      let scrollContact = $('.aContact');
-
-      scrollContact.on('click', function () {
-        $('#contact').velocity('scroll', {
-          duration: 1000,
-          easing: 'easeInOutQuint',
-        });
-      });
-    </script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
