fix: add better css style loading and convert all image to webp

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Florida Web Design, Web & Mobile App Development - Vanila.io</title>
-    <link rel="icon" href="../public/img/favicon-1.png" type="image/png">
+    <link rel="icon" href="../public/img/favicon-1.webp" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -10,7 +10,7 @@
     />
     <meta name="author" content="Vanila" />
     <meta http-equiv="Cache-control" content="public" />
-    <meta property="og:image" content="../public/img/vanila-og.png" />
+    <meta property="og:image" content="../public/img/vanila-og.webp" />
     <meta
       property="og:title"
       content="Vanila - Mobile & Web development, Design, SEO"
@@ -31,24 +31,45 @@
       name="twitter:description"
       content="Vanila is team who is specialized in front and backend development, seo and marketing."
     />
-    <meta name="twitter:image" content="../public/img/vanila-og.png" />
+    <meta name="twitter:image" content="../public/img/vanila-og.webp" />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script
+      src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"
+      defer
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"
+      defer
+    ></script>
+    <script src="//www.google-analytics.com/analytics.js" defer></script>
     <link
-      rel="stylesheet"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
     <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
     />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js" defer></script>
-    <script src="//www.google-analytics.com/analytics.js" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/segoe-fonts@1.0.1/segoe-fonts.min.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/segoe-fonts@1.0.1/segoe-fonts.min.css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
   </head>
   <body>
     <div id="root"></div>
